# bhcli

./: CONTRIBUTING.md  README.md  pyproject.toml
src/bhcli/: __main__.py  config.py
src/bhcli/api/: __init__.py  from_config.py
src/bhcli/cli/: __init__.py  audit.py  auth.py  clear_db.py  computers.py  cypher.py  domains.py  groups.py  mark.py  members.py  paramtypes.py  queries.py  stats.py  status.py  upload.py  users.py
tests/: README.md  config_example.ini  conftest.py
tests/cli/: test_010_auth.py  test_020_upload.py  test_audit.py  test_computers.py  test_cypher.py  test_domains.py  test_groups.py  test_mark.py  test_members.py  test_queries.py  test_stats.py  test_status.py  test_users.py  test_zzz_clear_db.py
