[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bhcli"
dynamic = ["version"]
description = "CLI tool to interact with the BloodHound CE API"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "exploide", email = "me@exploide.net" },
]
classifiers = [
  "Programming Language :: Python",
]
dependencies = [
  "click",
  "prettytable",
  "requests",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
Documentation = "https://github.com/exploide/bhcli#readme"
Issues = "https://github.com/exploide/bhcli/issues"
Source = "https://github.com/exploide/bhcli"

[project.scripts]
bhcli = "bhcli.__main__:main"

[tool.hatch.version]
path = "src/bhcli/__about__.py"
